testdata/baselines/reference/tests_cases_compiler_errorsInGenericTypeReference.ts.ast
SourceFile
  InterfaceDeclaration
    Identifier: ' IFoo'
    TypeParameter
      Identifier: 'T'
  ClassDeclaration
    Identifier: ' Foo'
    TypeParameter
      Identifier: 'T'
  ClassDeclaration
    Identifier: ' testClass1'
    MethodDeclaration
      Identifier: '
    method'
      TypeParameter
        Identifier: 'T'
      VoidKeyword
      Block
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' tc1'
        NewExpression
          Identifier: ' testClass1'
  ExpressionStatement
    CallExpression
      PropertyAccessExpression
        Identifier: '
tc1'
        Identifier: 'method'
      TypeLiteral
        PropertySignature
          Identifier: ' x'
          TypeReference
            Identifier: ' V'
  ClassDeclaration
    Identifier: ' testClass2'
    TypeParameter
      Identifier: 'T'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' tc2'
        NewExpression
          Identifier: ' testClass2'
          TypeLiteral
            PropertySignature
              Identifier: ' x'
              TypeReference
                Identifier: ' V'
  ClassDeclaration
    Identifier: ' testClass3'
    MethodDeclaration
      Identifier: '
    testMethod1'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
      Block
        ReturnStatement
          NullKeyword
    MethodDeclaration
      StaticKeyword
      Identifier: ' testMethod2'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
      Block
        ReturnStatement
          NullKeyword
    SetAccessor
      Identifier: ' a'
      Parameter
        Identifier: 'value'
        TypeReference
          Identifier: ' Foo'
          TypeLiteral
            PropertySignature
              Identifier: ' x'
              TypeReference
                Identifier: ' V'
      Block
    PropertyDeclaration
      Identifier: ' // error: could not find symbol V
    property'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
  FunctionDeclaration
    Identifier: ' testFunction1'
    TypeReference
      Identifier: ' Foo'
      TypeLiteral
        PropertySignature
          Identifier: ' x'
          TypeReference
            Identifier: ' V'
    Block
      ReturnStatement
        NullKeyword
  FunctionDeclaration
    Identifier: ' testFunction2'
    Parameter
      Identifier: 'p'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
    Block
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' f'
        TypeReference
          Identifier: ' Foo'
          TypeLiteral
            PropertySignature
              Identifier: ' x'
              TypeReference
                Identifier: ' V'
  ClassDeclaration
    Identifier: ' testClass4'
    TypeParameter
      Identifier: 'T'
      TypeLiteral
        PropertySignature
          Identifier: ' x'
          TypeReference
            Identifier: ' V'
  InterfaceDeclaration
    Identifier: ' testClass5'
    TypeParameter
      Identifier: 'T'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
  ClassDeclaration
    Identifier: ' testClass6'
    TypeParameter
      Identifier: 'T'
    MethodDeclaration
      Identifier: '
    method'
      TypeParameter
        Identifier: 'M'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
      VoidKeyword
      Block
  InterfaceDeclaration
    Identifier: ' testInterface1'
    ConstructSignature
      TypeParameter
        Identifier: 'M'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
      Parameter
        Identifier: 'a'
        TypeReference
          Identifier: ' M'
  ClassDeclaration
    Identifier: ' testClass7'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
  ClassDeclaration
    Identifier: ' testClass8'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' IFoo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
  InterfaceDeclaration
    Identifier: ' testInterface2'
    ConstructSignature
      Parameter
        Identifier: 'a'
        TypeReference
          Identifier: ' Foo'
          TypeLiteral
            PropertySignature
              Identifier: ' x'
              TypeReference
                Identifier: ' V'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
    IndexSignature
      Parameter
        Identifier: 'x'
        StringKeyword
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
    MethodSignature
      Identifier: ' // error: could not find symbol V
    method'
      Parameter
        Identifier: 'a'
        TypeReference
          Identifier: ' Foo'
          TypeLiteral
            PropertySignature
              Identifier: ' x'
              TypeReference
                Identifier: ' V'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
    PropertySignature
      Identifier: ' //2x: error: could not find symbol V
    property'
      TypeReference
        Identifier: ' Foo'
        TypeLiteral
          PropertySignature
            Identifier: ' x'
            TypeReference
              Identifier: ' V'
